--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -13,44 +13,57 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
-  <header class="header">
+  <header class="header theme-element">
     <div class="hamburger-menu">
       <input id="menu__toggle" type="checkbox" />
       <label class="menu__btn" for="menu__toggle">
         <span></span>
       </label>
       <ul class="menu__box">
-        <li><a class="menu__item" href="#shop">Shop</a></li>
-        <li><a class="menu__item" href="#howItWorks">How it works?</a></li>
-        <li><a class="menu__item" href="#whoIsTarla">Who is Tarla?</a></li>
+        <li><a data-i18="headerShop" class="menu__item" href="#shop">Shop</a></li>
+        <li><a data-i18="headerHowItWork" class="menu__item" href="#howItWorks">How it works?</a></li>
+        <li><a data-i18="headerWhoIsTarla" class="menu__item" href="#whoIsTarla">Who is Tarla?</a></li>
       </ul>
     </div>
-    <img src="..\Images\Frame.png" alt="logo" />
+    <img class="img" src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
-      <li class="li"><a class="link" href="#registration"> Shop</a></li>
-      <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
-      <li class="li"><a class="link" href="#whoIsTarla">Who is Tarla?</a></li>
+      <li class="li"><a data-i18="headerShop" class="link" href="#registration"> Shop</a></li>
+      <li class="li"><a data-i18="headerHowItWork" class="link" href="#howItWorks">How it works?</a></li>
+      <li class="li"><a data-i18="headerWhoIsTarla" class="link" href="#whoIsTarla">Who is Tarla?</a></li>
     </ul>
 
-    <button class="day-hught_switcher">
-      <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
-    </button>
-    <div class="logIn">
-      <img src="..\Images\Person.svg" alt="Rectangle.png" />
-      <p>Log in</p>
+    <div class="switchers">
+      <button data-i18="en" class="switcher changeButton theme-blueButton">
+        <img src="..\Images\UK.png" alt="light" />
+      </button>
+      <button data-i18="ru" class="switcher changeButton theme-blueButton">
+        <img src="..\Images\russia.png" alt="light" />
+      </button>
     </div>
+    <div class="switchers">
+      <button class="changeButton theme-blueButton" id="light-theme-btn">
+        <img src="..\Images\sun.png" alt="light" />
+      </button>
+      <button class="changeButton theme-blueButton" id="dark-theme-btn">
+        <img src="..\Images\night.png" alt="light" />
+      </button>
+    </div>
+    <button class="logIn">
+      <img src="..\Images\person.png" alt="light" />
+    </button>
+
   </header>
   <body class="body">
-    <section class="section1">
+    <section class="section1 theme-specialElement">
       <div class="div1">
-        <p class="H1">Fresh pastry kits</p>
-        <p class="P1">
+        <p data-i18="FreshPastryKits" class="H1">Fresh pastry kits</p>
+        <p data-i18="Smells" class="P1">
           Bringing the smells and tastes of your favourite patisserie to your
           home. Our kits have everything you need to easily make killer pastries
           every time. We’ve done the tricky bits so all you need to do is roll,
           proof and bake!
         </p>
-        <button class="button1">Read more</button>
+        <button data-i18="ReadMore" class="button1 theme-button">Read more</button>
       </div>
       <div class="swiper mySwiper img1">
         <div class="swiper-wrapper">
@@ -77,53 +90,53 @@
       </div>
         
     </section>
-    <section id="howItWorks" class="section2">
-      <p class="p2">How it works</p>
+    <section id="howItWorks" class="section2 theme-element">
+      <p data-i18="headerHowItWork"  class="p2">How it works</p>
       <div class="div2">
         <div class="img2">
           <img src="..\Images\1.png" alt="" />
-          <p class="H2_2">Choose your fave</p>
-          <p class="p2_2">
+          <p data-i18="ChoseYourFave" class="H2_2">Choose your fave</p>
+          <p data-i18="ChoseYourFaveDef" class="p2_2">
             This sounds easier than it's going to be. We've got all the classics
             on here, so now it's over to you.
           </p>
         </div>
         <div class="img2">
           <img src="..\Images\2.png" alt="" />
-          <p class="H2">Ding dong</p>
-          <p class="p2_2">
+          <p data-i18="DingDong" class="H2">Ding dong</p>
+          <p data-i18="DingDongDif" class="p2_2">
             Next you'll get a beautiful little package delivered to your door,
             on a day and time slot that you choose.
           </p>
         </div>
         <div class="img2">
           <img src="..\Images\3.png" alt="" />
-          <p class="H2">Get baked</p>
-          <p class="p2_2">
+          <p data-i18="GetBaked" class="H2">Get baked</p>
+          <p data-i18="GetBakedDif" class="p2_2">
             Take your fresh pastry sheet and fillings, learn our pro techniques
             then never buy a stale pastry ever again.
           </p>
         </div>
         <div class="img2">
           <img src="..\Images\4.png" alt="" />
-          <p class="H2_2">Take the credit</p>
-          <p class="p2_2">
+          <p data-i18="takeTheCredit" class="H2_2">Take the credit</p>
+          <p data-i18="takeTheCreditDif" class="p2_2">
             It was all you, nudge-nudge wink-wink. We're just happy to be your
             loyal side-kick.
           </p>
         </div>
       </div>
-      <button class="button2">Read more</button>
+      <button data-i18="ReadMore" class="button2 theme-button">Read more</button>
     </section>
    
-    <section class="section5">
+    <section class="section5 theme-element">
       <img src="..\Images\section5.png" alt="" />
     </section>
-    <section id="whoIsTarla" class="section6">
+    <section id="whoIsTarla" class="section6 theme-element">
       <div class="div6">
         <img class="img6" src="..\Images\6-1.png" alt="" />
-        <p class="p6_1">Better than the bakery</p>
-        <p class="p6_2">
+        <p data-i18="BetterThanbakery" class="p6_1">Better than the bakery</p>
+        <p data-i18="BetterThanbakeryDif" class="p6_2">
           You’ll soon be making pastries to rival the best bakeries in town. We
           use only the best ingredients for generous pastries that taste and
           smell amazing. So good, that you’ll take all the credit.
@@ -131,8 +144,8 @@
       </div>
       <div class="div6">
         <img class="img6" src="..\Images\6-2.png" alt="" />
-        <p class="p6_1">Planet-friendly packaging</p>
-        <p class="p6_2">
+        <p data-i18="PlanetFriendly" class="p6_1">Planet-friendly packaging</p>
+        <p data-i18="PlanetFriendlyDif" class="p6_2">
           We’ve done everything we can to make sure our packaging has the
           lightest footprint on the planet as possible. We’ve made sure
           everything is recyclable, and use as little packaging as we can.
@@ -140,8 +153,8 @@
       </div>
       <div class="div6">
         <img class="img6" src="..\Images\6-3.png" alt="" />
-        <p class="p6_1">Simple to bake at home</p>
-        <p class="p6_3">
+        <p data-i18="SimpleBake" class="p6_1">Simple to bake at home</p>
+        <p data-i18="SimpleBakeDif" class="p6_3">
           We’ve done the hard work, so you don’t have to. Every pastry is easy
           to make with our 3-step instructions and doesn’t require any special
           tools – just an oven!
@@ -150,24 +163,26 @@
     </section>
        
     <div class="line"></div>
-    <section class="section8">
-      <p class="H8">Join our community</p>
-      <p class="p8">and let's get baked</p>
-      <button class="button8"><a href="">Let's start</a></button>
+    <section class="section8 theme-element">
+      <p data-i18="JoinOurCommunity" class="H8">Join our community</p>
+      <p data-i18="GetBaked" class="p8">and let's get baked</p>
+      <button data-i18="SendUsMessage" class="button8 theme-button"><a href="">Let's start</a></button>
     </section>
   </body>
-  <footer class="footer">
+  <footer class="footer theme-element">
     <div class="icon">
       <img src="..\Images\phone.png" alt="Telephone">
       <a href="https://github.com/MaltSun/TarlaProgect"><img src="..\Images\github.png" alt="Github"/></a>
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
-  <a class="link" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
-  <a class="link" href="..\NotAuthorized\location.html">Location</a>
-  <a class="link" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
-  <a class="link" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
+  <a data-i18="FAQ" class="link" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
+  <a  data-i18="Location" class="link" href="..\NotAuthorized\location.html">Location</a>
+  <a data-i18="TermsOfService" class="link" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
+  <a data-i18="Privacy" class="link" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
 </div>
 <script src="..\Tarla\swaper.js"></script>
+<script src="..\changeLanguage.js"></script>
+<script src="..\changeColor.js"></script>
   </footer>  
 </html>
