fix: changed the way classes are transfered to change the theme

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="..\NotAuthorized\whoIsTarls.css" />
     <link rel="stylesheet" href="..\NotAuthorized\medialStyleWhoIsTarls.css" />
+    <link rel="stylesheet" href="..\changeColor.css" />
     <title>Who is tarla?</title>
   </head>
   <body class="body theme-element">
