--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="..\NotAuthorized\style.css" />
     <link rel="stylesheet" href="mediaStyle.css" />
     <link rel="stylesheet" href="swaper.css" />
+    <link rel="stylesheet" href="..\changeColor.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -14,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
   <header class="header theme-element">
-    <div class="hamburger-menu">
+    <div class="hamburger-menu theme-element">
       <input id="menu__toggle" type="checkbox" />
       <label class="menu__btn" for="menu__toggle">
         <span></span>
@@ -54,7 +55,7 @@
 
   </header>
   <body class="body">
-    <section class="section1 theme-specialElement">
+    <section class="section1 theme-block">
       <div class="div1">
         <p data-i18="FreshPastryKits" class="H1">Fresh pastry kits</p>
         <p data-i18="Smells" class="P1">
