--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleLocation.css" />
-    
+    <link rel="stylesheet" href="..\changeColor.css" />
     <title>We located</title>
 </head>
 <body class="body">
     <header id="top" class="header theme-specialElement">
       <a class="logo" href="..\NotAuthorized\index.html"><img src="..\Images\Frame.png" alt="logo" /></a>
       
-      <div class="hamburger-menu">
+      <div class="hamburger-menu theme-element">
         <input id="menu__toggle" type="checkbox" />
         <label class="menu__btn" for="menu__toggle">
           <span></span>
