--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaStyle.css" />
     <link rel="stylesheet" href="swaper.css" />
-    <link rel="stylesheet" href="sdarkLight.css" />
+    <link rel="stylesheet" href="..\changeColor.css" />
   </head>
   <header class="header theme-element">
-    <div class="hamburger-menu">
+    <div class="hamburger-menu theme-element">
       <input id="menu__toggle" type="checkbox" />
       <label class="menu__btn" for="menu__toggle">
         <span></span>
@@ -74,7 +74,7 @@
   </header>
 
   <body class="body">
-    <section class="section1 theme-specialElement">
+    <section class="section1 theme-block">
       <div class="div1">
         <p data-i18="FreshPastryKits" class="H1">Fresh pastry kits</p>
         <p data-i18="Smells" class="P1">
