--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="catalog.css" />
+    <link rel="stylesheet" href="..\changeColor.css" />
     <title>Catalog</title>
   </head>
-  <header class="header">
-    <div class="hamburger-menu">
+  <header class="header theme-specialElement">
+    <div class="hamburger-menu theme-specialElement">
       <input id="menu__toggle" type="checkbox" />
       <label class="menu__btn" for="menu__toggle">
         <span></span>
@@ -23,21 +24,37 @@
     /></a>
 
     <ul class="navigation">
-      <li class="li"><a class="link" href="#catalog">Catalog</a></li>
-      <li class="li"><a class="link" href="#delivery">Delivery</a></li>
+      <li class="li">
+        <a class="link theme-specialElement" href="#catalog">Catalog</a>
+      </li>
+      <li class="li">
+        <a class="link theme-specialElement" href="#delivery">Delivery</a>
+      </li>
     </ul>
 
-    <button class="switcher">
-      <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
-    </button>
-    <div class="logIn">
-      <img src="..\Images\Person.svg" alt="Rectangle.png" />
-      <p>Log in</p>
+    <div class="switchers">
+      <button data-i18="en" class="switcher changeButton theme-blueButton">
+        <img src="..\Images\UK.png" alt="light" />
+      </button>
+      <button data-i18="ru" class="switcher changeButton theme-blueButton">
+        <img src="..\Images\russia.png" alt="light" />
+      </button>
     </div>
+    <div class="switchers">
+      <button class="changeButton theme-blueButton" id="light-theme-btn">
+        <img src="..\Images\sun.png" alt="light" />
+      </button>
+      <button class="changeButton theme-blueButton" id="dark-theme-btn">
+        <img src="..\Images\night.png" alt="light" />
+      </button>
+    </div>
+    <button class="logIn">
+      <img src="..\Images\person.png" alt="light" />
+    </button>
   </header>
-  <body class="body">
-    <section class="section">
-      <div class="card">
+  <body class="body theme-element">
+    <section class="section theme-element">
+      <div class="card theme-element">
         <img id="catalog" src="..\Images\3-1.png" alt="" />
         <div class="divLeftYoRight baseText">
           <h2 class="mainText">All-Butter Croissant</h2>
@@ -54,7 +71,7 @@
           <h3 class="mainText">Price: kit of 6 - £12</h3>
         </div>
       </div>
-      <div class="card">
+      <div class="card theme-element">
         <div class="divLeftYoRight baseText">
           <h2 class="mainText">Almond Croissant</h2>
           <p>
@@ -73,7 +90,7 @@
         </div>
         <img src="..\Images\3-2.png" alt="" />
       </div>
-      <div class="card">
+      <div class="card theme-element">
         <img src="..\Images\3-3.png" alt="" />
         <div class="divLeftYoRight baseText">
           <h2 class="mainText">Raspberry Danish</h2>
@@ -97,7 +114,7 @@
           <h3 class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
       </div>
-      <div class="card">
+      <div class="card theme-element">
         <div class="divLeftYoRight baseText">
           <h2 class="mainText">Pain Aux Raisins</h2>
           <p>
@@ -120,7 +137,7 @@
         </div>
         <img src="..\Images\3-4.png" alt="" />
       </div>
-      <div class="card">
+      <div class="card theme-element">
         <img src="..\Images\3-5.png" alt="" />
         <div div class="divLeftYoRight baseText">
           <h2 class="mainText">Apricot Danish</h2>
@@ -144,7 +161,7 @@
           <h3 class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
       </div>
-      <div class="card">
+      <div class="card theme-element">
         <div div class="divLeftYoRight baseText">
           <h2 class="mainText">Pain Au Chocolat</h2>
           <p>
@@ -169,7 +186,7 @@
     </section>
     <img src="..\Images\fone.jpg" alt="" />
 
-    <section class="delivery baseText">
+    <section class="delivery baseText theme-element">
       <div id="delivery" class="divDelivery">
         <p class="mainText">Self-Pickup</p>
         <ul>
@@ -204,17 +221,23 @@
       </div>
     </section>
   </body>
-  <footer class="footer">
+  <footer class="footer theme-element">
     <div class="icon">
       <a href=""><img src="..\Images\phone.png" alt="Telephone" /></a>
-      <a href="https://github.com/MaltSun/TarlaProgect"><img src="..\Images\github.png" alt="Github"/></a>
+      <a href="https://github.com/MaltSun/TarlaProgect"
+        ><img src="..\Images\github.png" alt="Github"
+      /></a>
       <a href=""><img src="..\Images\e-mail.png" alt="E-mail" /></a>
     </div>
     <div class="divfooter">
-      <a class="link" href="..\Tarla\index.html">Tarla</a>
-      <a class="link" href="..\Tarla\index.html">How to use</a>
-      <a class="link" href="..\Tarla\aboutUs.html">Legend</a>
-      <a class="link" href="..\Tarla\aboutUs.html">Privacy Policy</a>
+      <a class="link theme-element" href="..\Tarla\index.html">Tarla</a>
+      <a class="link theme-element" href="..\Tarla\index.html">How to use</a>
+      <a class="link theme-element" href="..\Tarla\aboutUs.html">Legend</a>
+      <a class="link theme-element" href="..\Tarla\aboutUs.html"
+        >Privacy Policy</a
+      >
     </div>
+    <script src="..\changeLanguage.js"></script>
+    <script src="..\changeColor.js"></script>
   </footer>
 </html>
